# iaith

./: Cargo.toml
.github/workflows/: iaith.yaml  web.yaml
iaith/: .bumpversion.cfg  Cargo.toml  README.md
iaith/src/: brainf.rs  lib.rs  main.rs
latest/: 1.index.js  2.index.js  index.html  index.js  main.css
scripts/: should-release.sh
src/: lib.rs
web/: Cargo.toml  index.html  index.js  package-lock.json  package.json  styles.css  tailwind.config.js  webpack.config.js
web/src/: lib.rs
