[package]
name = "iaith"
version = "0.0.3-beta.1"
description = "Implementing toy languages in rust"
authors = ["Alex Carney <alcarneyme@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/alcarney/iaith"
repository = "https://github.com/alcarney/iaith"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
